# xfce4-netload-plugin

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt
icons/: Makefile.am  meson.build
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
m4/: libgtop.m4
panel-plugin/: Makefile.am  Makefile.in  commandline.c  global.h  meson.build  monitor-label.c  monitor-label.h  net.c  net.h  net_freebsd.c  net_libgtop2.c  net_linux.c  netload.c  netload.desktop.in  netload.desktop.in.in  os.h  slurm.h  utils.c  utils.h  wormulon.h
panel-plugin/wormulon/: freebsd.c  freebsd.h  hpux.c  hpux.h  if_media.c  linux.c  linux.h  macos.c  macos.h  netbsd.c  netbsd.h  openbsd.c  openbsd.h  solaris.c  solaris.h  unsupported.c  unsupported.h
po/: ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+25 more)
